# Cos214

./: .gitignore  README.md
COS214Prac2/: Boatman.cpp  Boatman.h  BoatmanFactory.cpp  BoatmanFactory.h  CMakeLists.txt  Infantry.cpp  Infantry.h  InfantryFactory.cpp  InfantryFactory.h  ShieldBearer.cpp  ShieldBearer.h  ShieldBearerFactory.cpp  ShieldBearerFactory.h  SoldierFactory.cpp  SoldierFactory.h  Soldiers.cpp  Soldiers.h
Prac 1/: Course.cpp  Course.h  Dessert.cpp  Dessert.h  MainCourse.cpp  MainCourse.h  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Starter.cpp  Starter.h  create_headers.sh  main  main.cpp
Prac2/: 214Prac2Object.vpp  Boatman.cpp  Boatman.h  BoatmanFactory.cpp  BoatmanFactory.h  CMakeLists.txt  Caretaker.cpp  Caretaker.h  Cos214Prac2.vpp  Infantry.cpp  Infantry.h  InfantryFactory.cpp  InfantryFactory.h  Memento.cpp  Memento.h  ShieldBearer.cpp  ShieldBearer.h  ShieldBearerFactory.cpp  ShieldBearerFactory.h  SoldierFactory.cpp  SoldierFactory.h  Soldiers.cpp  Soldiers.h  main  main.cpp
Prac3/: Ambush.cpp  Ambush.h  Artillery.cpp  Artillery.h  BattleStrategy.cpp  BattleStrategy.h  Cavalry.cpp  Cavalry.h  Flanking.cpp  Flanking.h  Fortification.h  Infantry.h  Legion.cpp  Legion.h  LegionFactory.cpp  LegionFactory.h  LegionUnit.cpp  LegionUnit.h  OpenField.cpp  OpenField.h  OpenFieldFactory.cpp  OpenFieldFactory.h  OpenFieldInfantry.cpp  Riverbank.cpp  Riverbank.h  RiverbankCavalry.h  RiverbankFactory.cpp  RiverbankFactory.h  TacticalCommand.cpp  TacticalCommand.h  TacticalMemento.cpp  TacticalMemento.h  TacticalPlanner.cpp  TacticalPlanner.h  TestingMain.cpp  UnitComponent.cpp  UnitComponent.h  WarArchives.cpp  WarArchives.h  Woodland.cpp  (+8 more)
Prac3/Artillery/: Artillery.cpp  Artillery.h  OpenFieldArtillery.cpp  OpenFieldArtillery.h  RiverbankArtillery.cpp  RiverbankArtillery.h  WoodlandArtillery.cpp  WoodlandArtillery.h
Prac3/COS214Prac3final.vpp/: COS214Prac3final.vpp.bak_000f
Prac3/Cavalry/: Cavalry.cpp  Cavalry.h  OpenFieldCavalry.cpp  OpenFieldCavalry.h  RiverbankCavalry.cpp  RiverbankCavalry.h  WoodlandCavalry.cpp  WoodlandCavalry.h
Prac3/Factories/: LegionFactory.cpp  LegionFactory.h  OpenFieldFactory.cpp  OpenFieldFactory.h  RiverbankFactory.cpp  RiverbankFactory.h  WoodlandFactory.cpp  WoodlandFactory.h
Prac3/Infantry/: Infantry.cpp  Infantry.h  OpenFieldInfantry.h  RiverbankInfantry.cpp  RiverbankInfantry.h  WoodlandInfantry.cpp  WoodlandInfantry.h
Prac3/Tactics/: Ambush.cpp  Ambush.h  Flanking.cpp  (+18 more)
Prac4/: COS214Prac4.vpp  aidan.txt  makefile
Prac5/: Alarm.cpp  Alarm.h  AlarmIntegrator.cpp  AlarmIntegrator.h  Command.cpp  Command.h  CommandOff.cpp  CommandOff.h  CommandOn.cpp  CommandOn.h  CommandToggle.cpp  CommandToggle.h  DeviceTraversal.cpp  DeviceTraversal.h  Door.cpp  Door.h  Environtment.cpp  Fridge.cpp  Fridge.h  Group.cpp  Group.h  Light.cpp  Light.h  LockState.h  Locked.cpp  Locked.h  MacroRoutines.cpp  MacroRoutines.h  Off.cpp  Off.h  OldAlarm.cpp  OldAlarm.h  OldThermostat.cpp  OldThermostat.h  On.cpp  On.h  Prac5.vpp  Prac5.vpp.bak_000d  Prac5.vpp.bak_000f  Prac5.vpp.bak_001d  (+46 more)
tempReverse/: LockState.h  Locked.cpp  Locked.h  Off.cpp  Off.h  On.cpp  On.h  State.h  SwitchState.h  Unlocked.cpp  Unlocked.h
(+103 files in other folders)
